--- a/README
+++ b/README
@@ -6,6 +6,12 @@ Lab 5, Layout vs. Schematic (LVS)
 Contents:
 ----------------------
 
-exercise_1
-exercise_2
-exercise_3
+exercise_1  simple example
+exercise_2  simple example
+exercise_3  simple example
+exercise_4  simple example
+exercise_5  power-on-reset circuit (analog)
+exercise_6  digital PLL circuit (digital)
+exercise_7  management protect circuit (digital with macros)
+exercise_8  digital PLL circuit
+exercise_9  power-on-reset circuit
